# HSBenchThroughput

./: benchmark-throughput.cabal  binsearch-benchmark.cabal
Benchmark/: BinSearch.hs  TimeKill.hs
