Name:                benchmark-throughput
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton
Maintainer:          rrnewton@gmail.com
Category:            Benchmarking
Build-type:          Simple
Cabal-version:       >=1.2

Synopsis: Binary search over benchmark input sizes for a benchmarks of linear complexity.

Description:

 This package provides methods (binsearch and fork/kill) for measuring
 the throughput rather than elapsed time of a computation.  That is,
 how large of an input can function handle in a given time?

Library
  exposed-modules:   Benchmark.BinSearch, 
                     Benchmark.TimeKill

  build-depends:     base >= 4.4.0.0,
                     ghc-prim, time
--                     criterion
